disable latex for matplotlib

--- a/analysis/rsa/rsa.ipynb
+++ b/analysis/rsa/rsa.ipynb
@@ -268,7 +268,7 @@
     "import matplotlib.gridspec as gridspec\n",
     "\n",
     "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
+    "    \"text.usetex\": False,\n",
     "    \"ytick.color\" : \"black\",\n",
     "    \"xtick.color\" : \"black\",\n",
     "    \"axes.labelcolor\" : \"black\",\n",
