--- a/analysis/rsa/rsa.ipynb
+++ b/analysis/rsa/rsa.ipynb
@@ -3,40 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd0b4c5-e9b8-4b54-98db-6ab1041303da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TPMSCAN_DATASET_PATH = \"../../tpmscan-dataset\"\n",
-    "TPM_PCR_DATASET_PATH = \"../../tpm_pcr_data\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b78bfe8-e41d-4f77-9166-c3742f577f68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pyprocess is required for running this notebook, to try installing it inside of the kernel\n",
-    "# uncomment and run the line below. Otherwise it is assumed, the package is installed.\n",
-    "#%pip install -e ./algtest-pyprocess"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "188878d0-3991-452e-beb6-5eddfb4d466d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pyprocess tpm metadata-update $TPMSCAN_DATASET_PATH\n",
-    "!pyprocess tpm summary-create ./metadata.json --tpm-pcr-path $TPM_PCR_DATASET_PATH"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "19bf13e9-8fe6-49cc-9215-f976598a4b0b",
    "metadata": {},
    "outputs": [],
@@ -69,9 +35,9 @@
     "        grouped[vendor].append(entry)\n",
     "    return grouped\n",
     "\n",
-    "metadata = load_metadata('./metadata.json')\n",
+    "metadata = load_metadata('../algtest-pyprocess/metadata.json')\n",
     "\n",
-    "with open(\"./tpm-pcr-metadata.json\", \"r\") as f:\n",
+    "with open(\"../algtest-pyprocess/tpm-pcr-metadata.json\", \"r\") as f:\n",
     "    tpm_pcr_metadata = json.load(f)"
    ]
   },
@@ -798,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
