flatten analysis directory

--- a/analysis/rsa.ipynb
+++ b/analysis/rsa.ipynb
@@ -35,9 +35,9 @@
     "        grouped[vendor].append(entry)\n",
     "    return grouped\n",
     "\n",
-    "metadata = load_metadata('../algtest-pyprocess/metadata.json')\n",
+    "metadata = load_metadata('./algtest-pyprocess/metadata.json')\n",
     "\n",
-    "with open(\"../algtest-pyprocess/tpm-pcr-metadata.json\", \"r\") as f:\n",
+    "with open(\"./algtest-pyprocess/tpm-pcr-metadata.json\", \"r\") as f:\n",
     "    tpm_pcr_metadata = json.load(f)"
    ]
   },
