--- a/analysis/support.ipynb
+++ b/analysis/support.ipynb
@@ -11,7 +11,7 @@
     "import yaml\n",
     "from definitions import *\n",
     "\n",
-    "DATASET_PATH = \"../../tpmscan-dataset\"\n",
+    "DATASET_PATH = \"../tpmscan-dataset\"\n",
     "\n",
     "def load_support(dir):\n",
     "    rows = []\n",
