--- a/analysis/timeline.ipynb
+++ b/analysis/timeline.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "with open('../algtest-pyprocess/measurement_stats.json', 'r') as f:\n",
+    "with open('./algtest-pyprocess/measurement_stats.json', 'r') as f:\n",
     "    fwinfo = json.load(f)"
    ]
   },
