--- a/analysis/ecc_keys.ipynb
+++ b/analysis/ecc_keys.ipynb
@@ -13,7 +13,7 @@
     "from pathlib import Path\n",
     "from common import *\n",
     "\n",
-    "DATASET_PATH = \"../../tpmscan-dataset\"\n",
+    "DATASET_PATH = \"../tpmscan-dataset\"\n",
     "\n",
     "def load_key_measurements(dir):\n",
     "    results = []\n",
@@ -95,7 +95,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -109,9 +109,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "ac4bde0aa26f0a292602beaa8a1e42791ecccd3bc4eca08279fca2b258d56c34"
@@ -119,5 +118,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
