add booltest script to ECC analysis

--- a/analysis/ecc/keys.ipynb
+++ b/analysis/ecc/keys.ipynb
@@ -13,7 +13,7 @@
     "from pathlib import Path\n",
     "from common import *\n",
     "\n",
-    "DATASET_PATH = \"../tpmscan-dataset\"\n",
+    "DATASET_PATH = \"../../tpmscan-dataset\"\n",
     "\n",
     "def load_key_measurements(dir):\n",
     "    results = []\n",
