--- a/analysis/ecc/nonces.ipynb
+++ b/analysis/ecc/nonces.ipynb
@@ -14,7 +14,7 @@
     "from common import *\n",
     "import pickle\n",
     "\n",
-    "DATASET_PATH = \"../tpmscan-dataset\"\n",
+    "DATASET_PATH = \"../../tpmscan-dataset\"\n",
     "\n",
     "def load_nonce_measurements(dir):\n",
     "    results = []\n",
