fix issues with data ordering for Fig. 3

--- a/analysis/ecc/nonces.ipynb
+++ b/analysis/ecc/nonces.ipynb
@@ -151,10 +151,12 @@
     "# Prepare data for paper plot\n",
     "paper = []\n",
     "for m in measurements:\n",
-    "    if m[\"alg\"] == \"ECDAA\" and m[\"curve\"] == \"BN256\" and (\"c54a5c95a8cca56b\" in m[\"name\"] or \"91e7840bd977ce81\" in m[\"name\"] or \"b4b57ab589a6fc0e\" in m[\"name\"]):\n",
+    "    if m[\"alg\"] == \"ECDAA\" and m[\"curve\"] == \"BN256\" and m[\"name\"] in (\"c54a5c95a8cca56b\", \"91e7840bd977ce81\", \"b4b57ab589a6fc0e\"):\n",
     "        paper.append(m)\n",
     "\n",
-    "paper[0], paper[1], paper[2] = paper[1], paper[2], paper[0]\n",
+    "paper.sort(key=lambda x: x[\"name\"])\n",
+    "\n",
+    "paper[0], paper[1], paper[2] = paper[2], paper[0], paper[1]\n",
     "\n",
     "pickle.dump(paper, open(\"ecc-timing.pickle\", \"wb\"))"
    ]
@@ -224,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
